# iradio

./: Cargo.toml  README.md  SPEC.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs
src/domain/: commands.rs  mod.rs  models.rs  palette.rs
src/integrations/: mod.rs  playback.rs  station_catalog.rs  vlc_http.rs  vlc_process.rs  vlc_rc.rs
src/storage/: config.rs  favorites.rs  mod.rs
src/ui/: mod.rs  render.rs
tests/: e2e_mock_playback.rs  integration_commands_and_favorites.rs  integration_playback_errors.rs  unit_commands.rs  unit_config.rs  unit_favorites.rs  unit_palette.rs
