[package]
name = "iradio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
